--- a/client/scss/pages/_levels.scss
+++ b/client/scss/pages/_levels.scss
@@ -135,6 +135,17 @@
             3s scale-breathing ease-in-out infinite .3s;
     }
 
+    &.tutorial {
+        top: 50%;
+        left: 50%;
+
+        &.active>.levels-minimap {
+            animation:
+                6s border-rotation linear infinite,
+                2s scale-breathing-small ease-in-out infinite .3s;
+        }
+    }
+
     &.remaining {
         &>.levels-minimap {
             opacity: 0.7;
@@ -181,6 +192,16 @@
 
     transform: scale(0.8);
     transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
+
+    &.tutorial {
+        transform: scale(1);
+        max-height: 10rem;
+        width: 50vw;
+        max-width: 10rem;
+        height: unset;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+    }
 }
 
 .levels-state {
@@ -189,8 +210,8 @@
     top: 0;
     left: 0;
 
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     background-color: colors.$main-color-light;
 
     opacity: 0;
