added an animated woodpigeon for the tutorial

--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -12,6 +12,7 @@
 @use 'game/hint';
 @use 'game/map';
 @use 'game/highscore';
+@use 'game/tutorial';
 
 @use 'experiences/experience';
 @use 'experiences/piaget';
