--- a/client/scss/_animations.scss
+++ b/client/scss/_animations.scss
@@ -409,3 +409,17 @@
         opacity: 0;
     }
 }
+
+@keyframes tutorial-continue {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(0.94);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
