--- a/client/scss/game/_tutorial.scss
+++ b/client/scss/game/_tutorial.scss
@@ -24,13 +24,33 @@
     width: 100%;
     height: 100%;
 
-    background-color: colors.$grey-medium;
-
     transition: opacity .2s linear;
     opacity: .6;
 
     &.hidden {
         opacity: 0;
+    }
+
+    &>svg {
+        &>defs>mask>ellipse {
+            transition: rx .3s ease-in-out, ry .3s ease-in-out;
+
+            &.hint {
+                cx: 50%;
+                cy: 100%;
+                rx: max(100%, calc(35rem + 20%));
+                ry: calc(min(25vw, 25vh, 10rem) + 2rem);
+            }
+
+            &.collapse {
+                rx: 0;
+                ry: 0;
+            }
+        }
+
+        &>.rectangle {
+            fill: colors.$grey-dark;
+        }
     }
 }
 
@@ -58,25 +78,18 @@
     }
 
     transform: translateX(0);
-    transition: transform 3s linear;
+    transition: transform 2s linear;
 
     &.hidden {
         transform: translateX(calc(-50% - 4rem));
-        transition: transform 3s linear;
+        transition: transform 2s linear;
     }
 }
 
-.woodpigeon-bubble {
+.woodpigeon-bubble-container {
     position: absolute;
-    top: 0;
+    top: -.5rem;
     margin: 0 1rem;
-
-    text-align: center;
-    max-width: 80vw;
-    padding: .6rem .8rem;
-    border-radius: .4rem;
-    color: colors.$grey-light;
-    background-color: colors.$grey-dark;
 
     transform-origin: 50% -50%;
     transform: scale(0) translateY(-100%);
@@ -88,18 +101,38 @@
     }
 }
 
+.woodpigeon-bubble {
+    position: relative;
+    text-align: center;
+    max-width: 80vw;
+
+    padding: .6rem .8rem;
+    color: colors.$grey-dark;
+    background-color: colors.$grey-light;
+    border-radius: .4rem;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: calc(100% - .1rem);
+        left: calc(50% - .5rem);
+        height: 1.1rem;
+        width: 1rem;
+        clip-path: polygon(0 0, 50% 100%, 100% 0);
+        background-color: colors.$grey-light;
+    }
+}
+
 .woodpigeon-infos {
     position: absolute;
     bottom: 0;
     margin: 0 1rem;
     transform: translateY(100%);
-
-    color: colors.$grey-dark;
-    font-family: 'Vincendo';
-    font-size: .9rem;
+    color: colors.$grey-extralight;
 
     opacity: 1;
     transition: opacity .3s ease-in-out;
+    animation: tutorial-continue 2s ease-in-out infinite;
 
     &.hidden {
         opacity: 0;
