--- a/client/scss/game/_tutorial.scss
+++ b/client/scss/game/_tutorial.scss
@@ -13,6 +13,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: opacity .3s linear;
+    opacity: 1;
+
+    &.hidden {
+        opacity: 0;
+        pointer-events: none;
+
+        &>.tutorial-mask {
+            pointer-events: none;
+        }
+    }
 }
 
 .tutorial-mask {
@@ -33,19 +45,8 @@
 
     &>svg {
         &>defs>mask>ellipse {
+            pointer-events: none;
             transition: rx .3s ease-in-out, ry .3s ease-in-out;
-
-            &.hint {
-                cx: 50%;
-                cy: 100%;
-                rx: max(100%, calc(35rem + 20%));
-                ry: calc(min(25vw, 25vh, 10rem) + 2rem);
-            }
-
-            &.collapse {
-                rx: 0;
-                ry: 0;
-            }
         }
 
         &>.rectangle {
@@ -80,9 +81,14 @@
     transform: translateX(0);
     transition: transform 2s linear;
 
-    &.hidden {
+    &.out-left {
         transform: translateX(calc(-50% - 4rem));
         transition: transform 2s linear;
+    }
+
+    &.out-right {
+        transform: translateX(calc(50% + 4rem));
+        transition: transform 1s linear;
     }
 }
 
@@ -93,11 +99,15 @@
 
     transform-origin: 50% -50%;
     transform: scale(0) translateY(-100%);
-    transition: transform .3s cubic-bezier(0.36, 0, 0.66, -0.56);
+    transition: transform .2s cubic-bezier(0.36, 0, 0.66, -0.56);
 
     &.pop {
         transform: scale(1) translateY(-100%);
-        transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
+        transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    &.focus {
+        transform: scale(1.1) translateY(-100%);
     }
 }
 
