--- a/client/scss/_animations.scss
+++ b/client/scss/_animations.scss
@@ -412,14 +412,14 @@
 
 @keyframes tutorial-continue {
     0% {
-        transform: scale(1);
+        transform: scale(1) translateY(100%);
     }
 
     50% {
-        transform: scale(0.94);
+        transform: scale(0.96) translateY(100%);
     }
 
     100% {
-        transform: scale(1);
+        transform: scale(1) translateY(100%);
     }
 }
