--- a/client/scss/game/_hint.scss
+++ b/client/scss/game/_hint.scss
@@ -57,14 +57,17 @@ $color-wrong : #c44343;
     padding: .6rem .8rem;
 
     transform: scale(0);
-    transition: transform .2s cubic-bezier(0.36, 0, 0.66, -0.56), background .2s linear;
+    opacity: 0;
+    transition: transform .2s cubic-bezier(0.36, 0, 0.66, -0.56), background .2s linear, opacity .2s ease-in;
 
     &.pop {
         transform: scale(1);
-        transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1), background .2s linear;
+        opacity: 1;
+        transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1), background .2s linear, opacity .2s ease-out;
     }
 
     &.focus {
+        transition: transform .1s ease-out, background .2s linear, opacity .2s ease-out;
         transform: scale(1.1);
     }
 
