--- a/client/scss/game/_tutorial.scss
+++ b/client/scss/game/_tutorial.scss
@@ -97,16 +97,19 @@
     top: -.5rem;
     margin: 0 1rem;
 
+    opacity: 0;
     transform-origin: 50% -50%;
     transform: scale(0) translateY(-100%);
-    transition: transform .2s cubic-bezier(0.36, 0, 0.66, -0.56);
+    transition: transform .2s cubic-bezier(0.36, 0, 0.66, -0.56), opacity .2s ease-in;
 
     &.pop {
+        opacity: 1;
         transform: scale(1) translateY(-100%);
-        transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1);
+        transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1), opacity .2s ease-out;
     }
 
     &.focus {
+        transition: transform .1s ease-out, opacity .2s ease-out;
         transform: scale(1.1) translateY(-100%);
     }
 }
@@ -121,6 +124,8 @@
     background-color: colors.$grey-light;
     border-radius: .4rem;
 
+    transition: background-color .3s linear, color .3s linear;
+
     &::before {
         content: '';
         position: absolute;
@@ -131,6 +136,16 @@
         clip-path: polygon(0 0, 50% 100%, 100% 0);
         background-color: colors.$grey-light;
     }
+
+    &.transparent {
+        color: colors.$grey-extralight;
+        background-color: colors.$grey-medium;
+
+        &::before {
+
+            background-color: colors.$grey-medium;
+        }
+    }
 }
 
 .woodpigeon-infos {
@@ -138,13 +153,21 @@
     bottom: 0;
     margin: 0 1rem;
     transform: translateY(100%);
+
     color: colors.$grey-extralight;
+    padding: .4rem .6rem;
+    border-radius: .4rem;
 
     opacity: 1;
-    transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out, background-color .3s linear, color .3s linear;
     animation: tutorial-continue 2s ease-in-out infinite;
 
     &.hidden {
         opacity: 0;
+    }
+
+    &.transparent {
+        background: colors.$grey-dark;
+        color: colors.$grey-light;
     }
 }
