--- a/client/scss/_animations.scss
+++ b/client/scss/_animations.scss
@@ -423,3 +423,17 @@
         transform: scale(1) translateY(100%);
     }
 }
+
+@keyframes phase-continue {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(0.96);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
