--- a/client/scss/game/_level.scss
+++ b/client/scss/game/_level.scss
@@ -44,9 +44,96 @@
     }
 }
 
+.level-phase-container {
+    position: absolute;
+    pointer-events: all;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.level-phase-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    transform: scale(0);
+    opacity: 1;
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+
+    &.reveal {
+        transform: scale(1);
+    }
+
+    &.hide {
+        transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+        transform: scale(5);
+        opacity: 0;
+    }
+}
+
+.level-phase-title {
+    font-size: 16vw;
+    padding: .2rem 1.2rem;
+    border-radius: .8rem;
+
+    font-family: 'Vincendo';
+    background-color: colors.$secondary-color-dark;
+    color: colors.$main-color-light;
+    border: solid .3rem colors.$main-color-light;
+}
+
+.level-phase-subtitle {
+    margin: 1rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    border-radius: .8rem;
+    padding: .3rem .6rem;
+    background-color: colors.$main-color-light;
+    color: colors.$main-color-dark;
+
+    opacity: 0;
+    transition: opacity .3s linear;
+
+    &.reveal {
+        opacity: 1;
+    }
+}
+
+.level-phase-continue {
+    position: absolute;
+    bottom: 1rem;
+
+    font-style: italic;
+    color: colors.$main-color-dark;
+
+    opacity: 0;
+    transition: opacity .3s linear;
+    animation: phase-continue 2s linear infinite;
+
+    &.reveal {
+        opacity: 1;
+    }
+}
+
 @media screen and (min-width: 380px) {
     .level-cancel-button {
         height: 4rem;
         width: 4rem;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .level-phase-title {
+        font-size: 5rem;
     }
 }
