--- a/client/scss/game/_map.scss
+++ b/client/scss/game/_map.scss
@@ -21,6 +21,11 @@
     z-index: 5;
 }
 
+.minimap {
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 .minimap-mask {
     position: absolute;
     top: 0;
@@ -28,6 +33,9 @@
     height: 100%;
     width: 100%;
     z-index: 100;
+
+    border-radius: 50%;
+    overflow: hidden;
 
     background-color: colors.$main-color-light;
     opacity: 1;
@@ -104,7 +112,6 @@
     top: .5rem;
     left: .5rem;
     transform: translate(-50%, -50%);
-    // overflow: hidden;
 }
 
 .level-position {
@@ -112,7 +119,6 @@
     height: 3rem;
     width: 3rem;
 
-    // border: solid .6rem colors.$main-color-dark;
     border-radius: 0 3rem 3rem 3rem;
     background-color: colors.$main-color-dark;
 
