--- a/client/scss/game/_score.scss
+++ b/client/scss/game/_score.scss
@@ -17,6 +17,10 @@
         transform: scale(1);
         transition: transform .2s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
+
+    &.stop>.score-text-container>.score-text {
+        background-color: colors.$grey-medium;
+    }
 }
 
 .score-text-container {
@@ -55,7 +59,7 @@
     justify-content: center;
     align-items: center;
 
-    transition: width .1s linear;
+    transition: width .1s linear, background-color .2s linear;
 
     &.default {
         &.left {
