--- a/client/scss/pages/_levels.scss
+++ b/client/scss/pages/_levels.scss
@@ -133,6 +133,10 @@
         animation:
             6s border-rotation linear infinite,
             3s scale-breathing ease-in-out infinite .3s;
+
+        &::before {
+            opacity: 1;
+        }
     }
 
     &.tutorial {
@@ -184,7 +188,6 @@
     position: relative;
     width: 4rem;
     height: 4rem;
-    overflow: hidden;
 
     border: solid .5rem colors.$main-color-dark;
     border-radius: 4rem;
@@ -202,6 +205,27 @@
         aspect-ratio: 1/1;
         border-radius: 50%;
     }
+
+    &::before {
+        content: "Continuer";
+        position: absolute;
+        z-index: 500;
+        display: flex;
+        align-items: center;
+
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: .9rem;
+        border-radius: .4rem;
+
+        padding: .4rem .6rem;
+        background-color: colors.$main-color-dark;
+        color: colors.$main-color-light;
+
+        opacity: 0;
+        transition: opacity .3s linear;
+    }
 }
 
 .levels-state {
@@ -213,6 +237,8 @@
     width: 100%;
     height: 100%;
     background-color: colors.$main-color-light;
+    border-radius: 50%;
+    overflow: hidden;
 
     opacity: 0;
     transition: opacity .2s linear;
@@ -221,6 +247,7 @@
         color: colors.$main-color-dark;
         width: inherit;
         height: inherit;
+        border-radius: 50%;
         transform: scale(1);
         transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
     }
@@ -233,6 +260,7 @@
     left: 0;
     height: 100%;
     width: 100%;
+    border-radius: 50%;
 
     transform: scale(1);
     transition: opacity .3s ease-in-out,
@@ -260,6 +288,34 @@
                 stroke-width: 0;
             }
         }
+    }
+}
+
+.levels-continue-indicator {
+    position: absolute;
+    top: calc(100% + 1rem);
+    left: 50%;
+
+    width: max-content;
+
+    font-family: 'Vincendo';
+    font-size: .8rem;
+
+    border-radius: .4rem;
+    padding: .4rem .6rem;
+    background-color: colors.$main-color-dark;
+    color: colors.$main-color-light;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transform: translateX(-50%) scale(0);
+    transition: transform .3s cubic-bezier(0.545, -0.215, 1.000, 0.470);
+
+    &.pop {
+        transform: translateX(-50%) scale(1);
+        transition: transform .3s cubic-bezier(0.075, 0.495, 0.320, 1.225);
     }
 }
 
@@ -292,7 +348,6 @@
     aspect-ratio: 1/1;
     border-radius: 50%;
     border: solid .5rem colors.$main-color-dark;
-    overflow: hidden;
 
     box-shadow: 0 0 1rem grey;
 
@@ -306,6 +361,8 @@
     width: 100%;
     height: 100%;
     pointer-events: all;
+    border-radius: 50%;
+    overflow: hidden;
 
     background-color: colors.$main-color-light;
     opacity: .8;
@@ -314,6 +371,8 @@
 .levels-experience-svg {
     position: absolute;
     z-index: 3;
+    border-radius: 50%;
+    overflow: hidden;
 
     &>svg {
         height: 100%;
