--- a/client/scss/pages/_levels.scss
+++ b/client/scss/pages/_levels.scss
@@ -78,8 +78,8 @@
     transform: scale(0);
     transition:
         transform .3s cubic-bezier(0.36, 0, 0.66, -0.56),
-        flex .5s ease-out,
-        margin .5s ease-out;
+        flex .5s cubic-bezier(0.65, 0, 0.35, 1),
+        margin .5s cubic-bezier(0.65, 0, 0.35, 1);
 
     &>svg {
         margin: 0 .3rem;
