--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -3,6 +3,7 @@
 @use 'pages/buttons';
 @use 'pages/elements';
 @use 'pages/title';
+@use 'pages/credits';
 @use 'pages/consent';
 @use 'pages/form';
 @use 'pages/levels';
@@ -27,61 +28,6 @@
     height: 100%;
     width: 100%;
     background-color: colors.$main-color-dark;
-}
-
-.page {
-    position: absolute;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-
-    overflow: hidden;
-    transition: transform .5s cubic-bezier(0.65, 0, 0.35, 1);
-    pointer-events: none;
-
-    &.previous {
-        transform: translateX(-100%);
-    }
-
-    &.current {
-        transform: translateX(0%);
-    }
-
-    &.next {
-        transform: translateX(100%);
-    }
-}
-
-.page-content {
-    max-width: 30rem;
-    max-height: calc(100% - 5rem);
-    width: calc(100% - 20vw);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    transform: scale(0);
-    transition: transform .3s cubic-bezier(0.545, -0.215, 1.000, 0.470);
-
-    &.pop {
-        transform: scale(1);
-        transition: transform .3s cubic-bezier(0.075, 0.495, 0.320, 1.225);
-    }
-
-    &.ptsot {
-        height: calc(100% - 10vh);
-        justify-content: flex-start;
-    }
 }
 
 .app-validation-container {
