--- a/client/scss/pages/_elements.scss
+++ b/client/scss/pages/_elements.scss
@@ -1,5 +1,60 @@
 @use '../colors';
 
+.page {
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    overflow: hidden;
+    transition: transform .5s cubic-bezier(0.65, 0, 0.35, 1);
+    pointer-events: none;
+
+    &.previous {
+        transform: translateX(-100%);
+    }
+
+    &.current {
+        transform: translateX(0%);
+    }
+
+    &.next {
+        transform: translateX(100%);
+    }
+}
+
+.page-content {
+    max-width: 30rem;
+    max-height: calc(100% - 5rem);
+    width: calc(100% - 20vw);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    transform: scale(0);
+    transition: transform .3s cubic-bezier(0.545, -0.215, 1.000, 0.470);
+
+    &.pop {
+        transform: scale(1);
+        transition: transform .3s cubic-bezier(0.075, 0.495, 0.320, 1.225);
+    }
+
+    &.ptsot {
+        height: calc(100% - 10vh);
+        justify-content: flex-start;
+    }
+}
+
 .banner {
     position: absolute;
     z-index: 50;
@@ -15,12 +70,25 @@
     padding: 1rem;
     gap: 1rem;
 
-    &.line { flex-direction: row; }
-    &.column { flex-direction: column; }
+    &.line {
+        flex-direction: row;
+    }
 
-    &.center { justify-content: center; }
-    &.left { justify-content: start; }
-    &.right { justify-content: end; }
+    &.column {
+        flex-direction: column;
+    }
+
+    &.center {
+        justify-content: center;
+    }
+
+    &.left {
+        justify-content: start;
+    }
+
+    &.right {
+        justify-content: end;
+    }
 }
 
 .header {
@@ -39,9 +107,17 @@
 
     gap: 1rem;
 
-    &.center { align-items: center; }
-    &.left { align-items: end; }
-    &.right { align-items: start; }
+    &.center {
+        align-items: center;
+    }
+
+    &.left {
+        align-items: end;
+    }
+
+    &.right {
+        align-items: start;
+    }
 }
 
 .mask {
@@ -54,13 +130,14 @@
 
     background-color: colors.$main-color-light;
     opacity: 1;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
     pointer-events: all;
 
     transition: opacity .2s;
+
     &.loaded {
         opacity: 0;
         pointer-events: none;
