--- a/client/scss/game/_map.scss
+++ b/client/scss/game/_map.scss
@@ -143,3 +143,31 @@
         background-color: colors.$secondary-color-dark;
     }
 }
+
+.level-routing-hint {
+    position: absolute;
+    pointer-events: none;
+    bottom: 0;
+    left: 0;
+    width: calc(100% - 2rem);
+    margin: 1rem;
+
+    display: flex;
+    justify-content: center;
+}
+
+.level-routing-label {
+    border-radius: .4rem;
+    color: colors.$main-color-light;
+    background-color: colors.$main-color-dark;
+
+    padding: .5rem .8rem;
+    font-style: italic;
+
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+
+    &.reveal {
+        opacity: 1;
+    }
+}
