display message if routing unavailable

--- a/client/scss/game/_map.scss
+++ b/client/scss/game/_map.scss
@@ -160,6 +160,7 @@
     border-radius: .4rem;
     color: colors.$main-color-light;
     background-color: colors.$main-color-dark;
+    text-align: center;
 
     padding: .5rem .8rem;
     font-style: italic;
