--- a/client/scss/pages/_title.scss
+++ b/client/scss/pages/_title.scss
@@ -62,7 +62,7 @@
 .title-buttons {
     position: absolute;
     z-index: 150;
-    bottom: 20%;
+    bottom: 15%;
     width: 100%;
 
     display: flex;
@@ -83,6 +83,28 @@
     &.pop {
         transform: scale(1);
         transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+}
+
+.title-button-share {
+    pointer-events: all;
+    height: min(11vw, 10vh);
+    width: min(11vw, 10vh);
+    align-self: center;
+
+    background-color: colors.$grey-medium;
+    color: colors.$main-color-light;
+    border-radius: 50%;
+
+    opacity: .8;
+
+    &>svg {
+        height: inherit;
+        width: inherit;
+    }
+
+    &.active {
+        background-color: colors.$secondary-color-dark;
     }
 }
 
@@ -137,5 +159,10 @@
 
     .title-build-label {
         font-size: .9rem;
+    }
+
+    .title-button-share {
+        height: 3rem;
+        width: 3rem;
     }
 }
