--- a/client/scss/_animations.scss
+++ b/client/scss/_animations.scss
@@ -437,3 +437,17 @@
         transform: scale(1);
     }
 }
+
+@keyframes button-click {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
