--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -21,6 +21,10 @@
 @use 'experiences/ptsot';
 @use 'experiences/purdue';
 
+.clicked {
+    animation: button-click .3s cubic-bezier(0.5, 1, 0.89, 1);
+}
+
 #application {
     position: absolute;
     top: 0;
