added a color and name selection page

--- a/client/scss/pages/_elements.scss
+++ b/client/scss/pages/_elements.scss
@@ -53,6 +53,10 @@
         height: calc(100% - 10vh);
         justify-content: flex-start;
     }
+
+    &.rabbits {
+        position: absolute;
+    }
 }
 
 .banner {
