added new unlockable rabbit colors

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -51,6 +51,22 @@ $enemies-transparent: #af616142;
     background-color: #8D8988;
 }
 
+.routing-pink {
+    background-color: #ff00ff;
+}
+
+.routing-neon {
+    background-color: #00ff15;
+}
+
+.routing-yellow {
+    background-color: #fffb00;
+}
+
+.routing-cyan {
+    background-color: #00ffea;
+}
+
 .highscore-player {
     background-color: $player;
 }
