--- a/client/scss/pages/_custom.scss
+++ b/client/scss/pages/_custom.scss
@@ -19,8 +19,13 @@
 }
 
 .custom-rabbit-container {
-    width: 100%;
+    width: calc(100% - 2rem);
     display: flex;
+    flex-direction: column;
+
+    margin: 1rem;
+    gap: 1rem;
+
     justify-content: center;
     align-items: center;
 
@@ -41,13 +46,14 @@
     width: 100%;
 
     gap: 1rem;
-    padding: 1rem;
 
     background-color: colors.$secondary-color-dark;
     border-radius: 0 .4rem 0 .4rem;
 }
 
 .custom-rabbit-individual {
+    position: relative;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,6 +71,22 @@
 
     &.active {
         background-color: colors.$main-color-light;
+    }
+}
+
+.custom-rabbit-lock {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    padding: .6rem;
+    width: calc(100% - .6rem);
+    height: calc(100% - .6rem);
+    color: colors.$main-color-light;
+
+    &>svg {
+        width: inherit;
+        height: inherit;
     }
 }
 
@@ -122,4 +144,16 @@
         height: inherit;
         width: inherit;
     }
+}
+
+.selection-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 500;
+    pointer-events: all;
+
+    background-color: aqua;
 }
