--- a/client/scss/pages/_custom.scss
+++ b/client/scss/pages/_custom.scss
@@ -67,6 +67,7 @@
         width: calc(100% - .6rem);
         height: calc(100% - .6rem);
         padding: .3rem;
+        image-rendering: pixelated;
     }
 
     &.active {
