--- a/client/scss/pages/_levels.scss
+++ b/client/scss/pages/_levels.scss
@@ -392,3 +392,99 @@
         transform: scale(0);
     }
 }
+
+.unlock-container {
+    pointer-events: all;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.unlock-window {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    border-radius: .4rem;
+
+    width: min(15rem, calc(100% - 2rem));
+    margin: 1rem;
+    padding: 1rem;
+    background-color: colors.$secondary-color-dark;
+
+    transform: scale(0);
+    transition: transform .3s cubic-bezier(0.545, -0.215, 1.000, 0.470);
+
+    &.pop {
+        transform: scale(1);
+        transition: transform .3s cubic-bezier(0.075, 0.495, 0.320, 1.225);
+    }
+}
+
+.unlock-text {
+    color: colors.$main-color-light;
+    text-align: center;
+}
+
+.unlock-rabbit {
+    position: relative;
+
+    border-radius: 50%;
+    background-color: colors.$main-color-light;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 5rem;
+    width: 5rem;
+
+    &>img {
+        height: calc(100% - .5rem);
+        width: calc(100% - .5rem);
+        image-rendering: pixelated;
+    }
+}
+
+.unlock-rabbit-lock {
+    pointer-events: none;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    &>svg {
+        height: inherit;
+        width: inherit;
+        color: colors.$main-color-dark;
+
+        opacity: 1;
+        transition: transform .5s linear, opacity .5s linear;
+    }
+
+    &.unlock {
+        &>svg {
+            transform: scale(4);
+            opacity: 0;
+        }
+    }
+}
+
+.unlock-button {
+    font-family: 'Vincendo';
+    font-size: .9rem;
+    pointer-events: all;
+    border-radius: .4rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: colors.$main-color-light;
+    color: colors.$main-color-dark;
+    padding: .5rem .8rem;
+}
