--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -1,4 +1,5 @@
 @use 'colors';
+@use 'sizes';
 
 @use 'pages/buttons';
 @use 'pages/elements';
@@ -77,7 +78,7 @@
 
     background-color: colors.$secondary-color-dark;
     color: colors.$main-color-light;
-    border-radius: .4rem;
+    border-radius: sizes.$border-radius;
 
     transform: scale(0);
     transition: transform .3s cubic-bezier(0.545, -0.215, 1.000, 0.470);
@@ -113,7 +114,7 @@
     justify-content: center;
     align-items: center;
 
-    border-radius: .4rem;
+    border-radius: sizes.$border-radius;
     background-color: colors.$main-color-light;
     color: colors.$main-color-dark;
     padding: .5rem .8rem;
