--- a/client/scss/experiences/_purdue.scss
+++ b/client/scss/experiences/_purdue.scss
@@ -1,4 +1,5 @@
 @use '../colors';
+@use '../sizes';
 
 $model-color: #806d54;
 $answer-color: #537ca3;
@@ -45,7 +46,7 @@ $answer-color-light: #bed3e6;
     max-height: 100%;
     min-width: 0;
     aspect-ratio: 1/1;
-    border-radius: .4rem;
+    border-radius: sizes.$border-radius;
     background-color: colors.$main-color-light;
     pointer-events: all;
 
