--- a/client/scss/pages/_custom.scss
+++ b/client/scss/pages/_custom.scss
@@ -1,4 +1,5 @@
 @use '../colors';
+@use '../sizes';
 
 .custom-text {
     width: 100%;
@@ -104,7 +105,7 @@
 
 .custom-pseudo-back {
     width: calc(100% - 2rem);
-    border-radius: .4rem;
+    border-radius: sizes.$border-radius;
 
     overflow: hidden;
     color: colors.$main-color-dark;
