--- a/client/scss/pages/_form.scss
+++ b/client/scss/pages/_form.scss
@@ -1,4 +1,5 @@
 @use '../colors';
+@use '../sizes';
 
 .form-text {
     width: 100%;
@@ -35,7 +36,7 @@
 
 .form-answer {
     padding: .3rem .5rem;
-    border-radius: .4rem;
+    border-radius: sizes.$border-radius;
 
     background-color: colors.$main-color-light;
     color: colors.$main-color-dark;
